tests/valid/HexAssign_Valid_1.whiley


public export method test() :
    int x = 200
    assert x == 200
    x = 1
    assert x == 1
    x = 0
    assert x == 0
    x = 24343
    assert x == 24343
    x = 2143
    assert x == 2143
    x = 2143
    assert x == 2143
